<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RehApp</string>
    <string name="login">Enter your email address..</string>
    <string name="password">Enter your password..</string>
    <string name="login_button">Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_home">Home</string>
    <string name="action_schedule">Schedule</string>
    <string name="action_photos">Photos</string>
    <string name="action_exercises">Exercises</string>
    <string name="action_notes">Notes</string>
    <string name="action_calendar">Calendar</string>
    <string name="homeIntro">Today is: %1$s, \nDays left until the end of treatment: %2$d</string>
    <string name="noteIntro">Your therapist is: %1$s</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_photos">Photos</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="title_activity_doctor_notes">Notes</string>
    <string name="title_activity_single_ex">Chosen Exercise</string>
    <string name="photos">Photos</string>
    <string name="choose_from_gallery_btn">Choose from gallery..</string>
    <string name="take_photo_btn">Take a photo</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="sendNoteBtnTitle">Send</string>
    <string name="editTextNoteHint">Type message...</string>
    <string name="exDoneBtnTitle">Done</string>
    <string name="exNotDoneBtnTitle">Not Done</string>
    <string name="exTTSBtnTitle">Text to Speech</string>
	<string name="loginFailMessage">Username or password not recognized, please try again.</string>
	<string name="networkFailMessage">Network is unavailable.</string>
    
    <string-array name="ExerciseTitles">
        <item>Arm Exercise 1</item>
        <item>Arm Exercise 2</item>
        <item>Leg Exercise 1</item>
        <item>Arm Exercise 2</item>
        <item>Leg Exercise 1</item>
        <item>Arm Exercise 2</item>
        <item>Leg Exercise 1</item>
    </string-array>
    <string-array name="ExerciseDescs">
        <item>    -Step one foot forward, letting that knee bend.\n
    -Lean onto the front leg, bringing your head and chest toward the corner. \n
    -Hold for 20-30 seconds. \n
    -Stand up straight and switch feet. \n
    -Repeat it on the other side. \n</item>
        <item>Do things with arm</item>
        <item>Move leg up</item>
        <item>Raise arm</item>
        <item>Do things with arm</item>
        <item>Move leg up</item>
        <item>Do things with arm</item>
    </string-array>
    


</resources>
