<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pjwstk.rehapp.Photos$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photos" />

    <Button
        android:id="@+id/choose_from_gallery_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/choose_from_gallery_btn"
        android:onClick="choosePhotosGallery" />

    <Button
        android:id="@+id/take_photo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_from_gallery_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/take_photo_btn"
        android:onClick="takePhoto" />

 
</RelativeLayout>